--- a/index.html
+++ b/index.html
@@ -90,24 +90,24 @@
 
         <h2>Feedback Parameters</h2>
         <div class="parameter">
-            <img src="/Simulation/tempSensor.jpg" alt="Temperature Icon">
+            <img src="tempSensor.jpg" alt="Temperature Icon">
             <label for="temperature">1. Temperature of Thermofluid <b>(50 to 300°C)</b>:</label>
             <input type="range" id="temperature" min="50" max="300" value="50">
             <span id="temperature-value"></span>
         </div>
 
         <div class="parameter">
-            <img src="/Simulation/flowSensor.jpg" alt="Flow Rate Icon">
-            <label for="flow-rate">2. Flow Rate of juice Stream <b>(0 to 50 L/min)</b>:</label>
+            <img src="flowSensor.jpg" alt="Flow Rate Icon">
+            <label for="flow-rate">2. Flow Rate of juice Stream <b>(0 to 10 L/min)</b>:</label>
             <input type="range" id="flow-rate" min="0" max="10" value="10">
             <span id="flow-rate-value"></span>
         </div>
         <div>
             <div class="motor">
-                <img src="/Simulation/feedPump.jpeg" alt="Motor 1 Icon">
+                <img src="feedPump.jpeg" alt="Motor 1 Icon">
                 <h3>Feed Pump (RPM): <span id="motor1-rpm-value">0</span></h3>
 
-                <img src="/Simulation/stirrer.webp" alt="Motor 2 Icon">
+                <img src="stirrer.webp" alt="Motor 2 Icon">
                 <h3>Stirrer Motor (RPM): <span id="motor2-rpm-value">0</span></h3>
 
             </div>
