--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 <body>
     <div class="dashboard-container">
         <h1>Process Control Simulation</h1>
-        <img src="/Simulation/raspberry.jpg" width="300px" height="500px">
+        <img src="raspberry.jpg" width="300px" height="500px">
     </div>
 
     <div id="simulation-container">
